Ajusta rotas e OpenAPI
